[FIX] Módulo de itens/list

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,15 @@
 {
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "arrowParens": "always",
+  "quoteProps": "as-needed",
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "rangeStart": 0,
+  "insertPragma": false,
+  "proseWrap": "preserve"
 }
